# Webfurl

./: .env.example  .gitignore  Cargo.toml  README.md  start.sh  stop.sh  webfurl_context.md  webfurl_stats.md  webfurl_tree_dump.txt
crates/webfurl-agent/: Cargo.toml
crates/webfurl-agent/src/: agent.rs  browser.rs  main.rs
crates/webfurl-core/: Cargo.toml
crates/webfurl-core/src/: actions.rs  cache.rs  debug.rs  embeddings.rs  error.rs  hasher.rs  lib.rs  pipeline.rs  serialize.rs  tree.rs  unfold.rs  vision.rs
crates/webfurl-server/: Cargo.toml
crates/webfurl-server/src/: main.rs
