[package]
name = "webfurl-core"
version = "0.1.0"
edition = "2021"

[dependencies]
minillmlib = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# HTML parsing & DOM
dom_query = "0.7"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Embeddings & HTTP
reqwest = { version = "0.12", features = ["json"] }

# MongoDB
mongodb = "3"

# Async parallelism
futures = "0.3"

# Utilities
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
